EXTRA_DIST = \
     NetworkManager.h \
     NetworkManagerVPN.h \
     nm-dbus-glib-types.h \
     nm-glib-compat.h \
     nm-gvaluearray-compat.h \
     nm-test-utils.h \
     nm-version.h.in \
     nm-settings-flags.h

NetworkManagerincludedir=$(includedir)/NetworkManager

NetworkManagerinclude_HEADERS = \
	NetworkManager.h \
	NetworkManagerVPN.h \
	nm-version.h

