EXTRA_DIST = \
	all.xml.in \
	generic-types.xml \
	errors.xml \
	vpn-errors.xml \
	nm-access-point.xml \
	nm-active-connection.xml \
	nm-agent-manager.xml \
	nm-device-adsl.xml \
	nm-device-bond.xml \
	nm-device-bridge.xml \
	nm-device-bt.xml \
	nm-device-ethernet.xml \
	nm-device-generic.xml \
	nm-device-gre.xml \
	nm-device-infiniband.xml \
	nm-device-macvlan.xml \
	nm-device-modem.xml \
	nm-device-olpc-mesh.xml \
	nm-device-team.xml \
	nm-device-tun.xml \
	nm-device-veth.xml \
	nm-device-vlan.xml \
	nm-device-vxlan.xml \
	nm-device-wifi.xml \
	nm-device-wimax.xml \
	nm-device.xml \
	nm-dhcp4-config.xml \
	nm-dhcp6-config.xml \
	nm-ip4-config.xml \
	nm-ip6-config.xml \
	nm-manager.xml \
	nm-ppp-manager.xml \
	nm-secret-agent.xml \
	nm-settings-connection.xml \
	nm-settings.xml \
	nm-vpn-connection.xml \
	nm-vpn-plugin.xml \
	nm-wimax-nsp.xml
